<resources>
    <string name="app_name">Hello Android</string>
    <string name="button_name">button</string>
    <string name="title">Android practice</string>
    <string name="hello" translatable="false">Hello!</string>
    <string name="sign_up" translatable="false">Signup</string>
    <string name="login" translatable="false">Login</string>
    <string name="username_placeholder" translatable="false">Username</string>
    <string name="password_placeholder" translatable="false">Password</string>
    <string name="remember_me" translatable="false">Remember me</string>
    <string name="forgot_password" translatable="false">Forgot password?</string>
    <string name="connect_tag" translatable="false">or connect with</string>
    <string name="sign_up_with_e_mail" translatable="false">Sign Up with E-mail</string>
    <string name="android" translatable="false">Android</string>
    <string name="java" translatable="false">Java</string>
    <string name="text_view_placeholder" translatable="false">text view placeholder</string>
    <string name="android_desc" translatable="false">Android is a mobile operating system based on a modified version of the Linux kernel and other
open source software, designed primarily for touchscreen mobile devices such as smartphones
and tablets.</string>
    <string name="java_desc" translatable="false">
        Java is a High Level, class-based, object-oriented programming language that is designed to have
as few implementation dependencies as possible.
    </string>
    <string name="already_bottom" translatable="false">到底了</string>
    <string name="counter_value" translatable="false">0</string>
    <string name="promotion_text" translatable="false">提示信息：\n点击“知道了”不再提示。</string>
    <string name="yes" translatable="false">知道了</string>
    <string name="preference_show_key" translatable="false">com.thoughtworks.androidtrain.PREFERENCE_SHOW_KEY</string>
    <string name="is_hint_show" translatable="false">isHintShow</string>
    <string name="welcome_back">欢迎您回来</string>

</resources>