<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConstraintActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/hello"
        android:textSize="24sp">
    </TextView>
    <ImageView
        android:id="@+id/github_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@mipmap/github">
    </ImageView>
    <Button
        android:id="@+id/sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/github_logo"
        app:layout_constraintLeft_toLeftOf="@id/github_logo"
        app:layout_constraintRight_toRightOf="@id/github_logo"
        app:backgroundTint="@null"
        android:background="@drawable/button_selector"
        android:textColor="@color/black"
        android:text="@string/sign_up">
    </Button>

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/sign_up"
        app:layout_constraintLeft_toLeftOf="@id/github_logo"
        app:layout_constraintRight_toRightOf="@id/github_logo"
        app:backgroundTint="@null"
        android:background="@drawable/button_selector"
        android:textColor="@color/black"
        android:text="@string/login">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>